--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,29 @@
 
 <head>
   <meta charset="utf-8" />
+
+  <!-- Primary Meta Tags -->
+  <title>Ilse & Oscar</title>
+  <meta name="title" content="Ilse & Oscar">
+  <meta name="description"
+    content="Ilse & Oscar wedding fest. El evento será celebrado el día 22  de Octubre de 2022 en Querétaro... Los esperamos!">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bonos-wedding.web.app/">
+  <meta property="og:title" content="Ilse & Oscar">
+  <meta property="og:description"
+    content="Ilse & Oscar wedding fest. El evento será celebrado el día 22  de Octubre de 2022 en Querétaro... Los esperamos!">
+  <meta property="og:image" content="./cover.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://bonos-wedding.web.app/">
+  <meta property="twitter:title" content="Ilse & Oscar">
+  <meta property="twitter:description"
+    content="Ilse & Oscar wedding fest. El evento será celebrado el día 22  de Octubre de 2022 en Querétaro... Los esperamos!">
+  <meta property="twitter:image" content="">
+
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -22,23 +45,6 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Ilse & Oscar wedding fest" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Ilse &amp; Oscar</title>
   <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
 </head>
 
